# gspell

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.md  autogen.sh  config.h.in  configure.ac  gspell-1.pc.in  gspell-3.0.pc.in  gspell-cmake.pc.in  gspell.doap  gspell.pc.in  meson.build  meson_options.txt
cmake/: gsw-c-flags.cmake  gsw-misc.cmake  gsw-mkenums.cmake  gsw-pkg-config.cmake  gsw-resources.cmake  gsw.cmake
cmake/gsw-c-flags/: CMakeLists.txt  gsw-c-flags-get-list.cmake  test.c
docs/: Makefile.am  dev-notes.md  faq.md  flatpak-notes  gspell.next.md  more-information.md
docs/reference/: Makefile.am  gspell-1.0-sections.txt  gspell-3.0-sections.txt  gspell-docs.xml  gspell-docs.xml.in  gspell1-sections.txt  intro.xml  intro.xml.in  meson.build
docs/reference/xml/: gtkdocentities.ent.in  meson.build
gspell/: CMakeLists.txt  Makefile.am  gedit-automatic-spell-checker.c  gedit-automatic-spell-checker.h  gedit-spell-checker-dialog.c  gedit-spell-checker-dialog.h  gedit-spell-checker-language.c  gedit-spell-checker-language.h  gedit-spell-checker.c  gedit-spell-checker.h  gedit-spell-language-dialog.c  gedit-spell-language-dialog.h  gedit-spell-navigator-gtv.c  gedit-spell-navigator-gtv.h  gedit-spell-navigator.c  gedit-spell-navigator.h  gedit-spell-osx.c  gedit-spell-osx.h  gedit-spell-utils.c  gedit-spell-utils.h  gspell-automatic-spell-checker.c  gspell-automatic-spell-checker.h  gspell-buffer-notifier.c  gspell-buffer-notifier.h  gspell-checker-dialog.c  gspell-checker-dialog.h  gspell-checker-language.c  gspell-checker-language.h  gspell-checker-private.h  gspell-checker.c  gspell-checker.h  gspell-context-menu.c  gspell-context-menu.h  gspell-current-word-policy.c  gspell-current-word-policy.h  gspell-entry-buffer.c  gspell-entry-buffer.h  gspell-entry-private.h  gspell-entry-utils.c  gspell-entry-utils.h  (+74 more)
gspell-app/: Makefile.am  gspell-app.c  meson.build
gspell/resources/: Makefile.am  checker-dialog.ui  gspell.gresource.xml  language-dialog.ui  meson.build
m4/: ax_code_coverage.m4
po/: LINGUAS  Makevars  Makevars.in  POTFILES.in  ab.po  ar.po  be.po  bg.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gd.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  kw.po  lo.po  (+29 more)
tests/: Makefile.am  meson.build  test-entry.c  test-spell.c  test-text-view-basic.c  test-text-view.c
tests/interactive-tests/: test-entry.c  test-text-view-basic.c  test-text-view.c
tests/unit-tests/: gspell.test.in  meson.build  test-checker.c  test-entry.c  test-inline-checker-text-buffer.c  test-text-iter.c
testsuite/: Makefile.am  meson.build  test-checker.c  test-entry.c  test-icu.c  test-inline-checker-text-buffer.c  test-text-iter.c  test-utils.c
